<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Both_Match_style"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/lin_receivables"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_receivables"
            style="@style/Both_Wrap_style" />

        <TextView
            android:id="@+id/footer_receivables_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_5px"
            android:text="@string/receivables"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_marketing"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_marketing"
            style="@style/Both_Wrap_style" />

        <TextView
            android:id="@+id/footer_marketing_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_5px"
            android:text="@string/marketing"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_member"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_member"
            style="@style/Both_Wrap_style" />

        <TextView
            android:id="@+id/footer_member_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_5px"
            android:text="@string/member"
            android:textColor="@color/gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_management"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_management"
            style="@style/Both_Wrap_style" />

        <TextView
            android:id="@+id/footer_management_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_5px"
            android:text="@string/business"
            android:textColor="@color/gray" />

    </LinearLayout>

</LinearLayout>